# grpc_tonic

./: Cargo.toml  build.rs
proto/: records.proto  records.rs
src/: client.rs  server.rs
